samples/_failures_safe/1761317269_5cdd15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb77d763.c:149:1: error: expected identifier or ‘(’ at end of input
  149 | void
      | ^~~~
